k8-configs/pokeapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokeapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokeapp
  template:
    metadata:
      labels:
        app: pokeapp
    spec:
      containers:
        - name: pokeapp
          image: evilgenius13/pokeapp:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pokeapp-service
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30100
  selector:
    app: pokeapp
