k8-configs/pokeapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8.octocloud.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pokeapp-service
            port:
              number: 30100
